--- a/API Reference/chap1.tex
+++ b/API Reference/chap1.tex
@@ -5,16 +5,16 @@
 %\chapterimage{chapter_head_2.pdf} % Chapter heading image
 
 \chapter{Introduction}
-
+ 
 \section{Before Starting}\index{Before Starting}
 
 %\lipsum[1-7] % Dummy text
-
+%\fig{6cm}{./resources/fig1-2.png}{初始化界面}
 %------------------------------------------------
 
 \section{Data Structure}\index{Data Structure}
 
-%This statement requires citation \cite{book_key}; this one is more specific \cite[122]{article_key}.
+%This statement requires citation \cite{bo ok_key}; this one is more specific \cite[122]{article_key}.
 
 %------------------------------------------------
 
