--- a/API Reference/main.tex
+++ b/API Reference/main.tex
@@ -108,7 +108,7 @@
 
 \include{chap1}
 
-%\include{chap2}
+\include{chap2}
 
 %----------------------------------------------------------------------------------------
 %	PART
@@ -120,7 +120,7 @@
 %	CHAPTER 3
 %----------------------------------------------------------------------------------------
 
-
+\include{chap3}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
