Added new section.

--- a/API Reference/chap1.tex
+++ b/API Reference/chap1.tex
@@ -14,6 +14,22 @@
 
 \section{Data Structure}\index{Data Structure}
 
+
+\section{Python Code Examples}\index{Python Code Examples}
+\subsection{Pulse Download and Start}\index{Pulse Download and Start}
+\subsection{Counter Data Readout}\index{Counter Data Readout}
+
+
+
+\section{C Code Examples}\index{C Code Examples}
+\subsection{Pulse Download and Start}\index{Pulse Download and Start}
+\subsection{Counter Data Readout}\index{Counter Data Readout}
+
+\section{Labview Examples}\index{Labview Examples}
+\subsection{Pulse Download and Start}\index{Pulse Download and Start}
+\subsection{Counter Data Readout}\index{Counter Data Readout}
+
+
 %This statement requires citation \cite{bo ok_key}; this one is more specific \cite[122]{article_key}.
 
 %------------------------------------------------
