中文的API Reference of ASG

--- a/API Reference/structure.tex
+++ b/API Reference/structure.tex
@@ -68,9 +68,10 @@
 
 \usepackage{titletoc} % Required for manipulating the table of contents
 
-\usepackage{indentfirst} 
+\usepackage{indentfirst}
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{ctex} 
 
 \contentsmargin{0cm} % Removes the default margin
 
