new version of the specification

--- a/ASG_specification/ASG用户手册—LaTeX/main.tex
+++ b/ASG_specification/ASG用户手册—LaTeX/main.tex
@@ -18,9 +18,7 @@
 \usepackage{indentfirst}
 %\usepackage{psfig}
 
-
 \renewcommand{\contentsname}{\heiti{目录}}
-
 
 \geometry{left=3.17cm,right=3.17cm,top=2.54cm,bottom=2.54cm}
 \graphicspath{{figures/}}
@@ -32,14 +30,11 @@
 \titleformat{\chapter}{\fontsize{18pt}{\baselineskip}\bfseries}{\thechapter}{1em}{}
 \titlespacing*{\chapter} {0pt}{-12pt}{\baselineskip}
 \titleformat{\section}{\fontsize{15pt}{\baselineskip}\bfseries}{\thesection}{1em}{}
+%\captionsetup[figure]{labelfont={default},name={图},labelformat={default}}
 \captionsetup[figure]{labelfont={default},name={图},labelformat={default}}
 
 
-
-
-
 %\include{pagestyle}
-
 
 
 \begin{document}
@@ -66,7 +61,7 @@
 \begin{titlepage}
 \newgeometry{left=0cm,right=0cm,top=0cm,bottom=0cm}
 \begin{center}
-\includegraphics[width=20.99cm,height=29.69cm]{titlepage}
+\includegraphics[width=20.99cm,height=29.69cm]{coverpage}
 \end{center}
 \end{titlepage}
 
