Add pecification written in English

--- a/ASG_specification_no_counter/ASG用户手册—LaTeX/main.tex
+++ b/ASG_specification_no_counter/ASG用户手册—LaTeX/main.tex
@@ -33,9 +33,7 @@
 %\captionsetup[figure]{labelfont={default},name={图},labelformat={default}}
 \captionsetup[figure]{labelfont={default},name={图},labelformat={default}}
 
-
 %\include{pagestyle}
-
 
 \begin{document}
 
@@ -78,7 +76,7 @@
 \pagenumbering{Roman}
 
 \input{chapters/intro}
-\input{chapters/abstract}
+%\input{chapters/abstract}
 
 
 \newpage
