Added method in MAC OSX.

--- a/ASG_specification_no_counter_English/ASG用户手册—LaTeX/main.tex
+++ b/ASG_specification_no_counter_English/ASG用户手册—LaTeX/main.tex
@@ -98,6 +98,7 @@
 \input{chapters/chap3}
 \input{chapters/chap4}
 \input{chapters/chap5}
+\input{chapters/chap5_macos}
 \input{chapters/chap6}
 \input{chapters/chap7}
 
